# bkstem_

./: .env  README.md  bk.dump  docker-compose.yml
api/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.dev  README.md  client_secrets.json  main.py  pyproject.toml
api/config/: setting.py
api/core/api_v1/: api.py
api/db/: 01_public.sql  02_sample_data.sql
api/models/: absent_type.py  account.py  assignment.py  audio_file.py  base.py  boxtype.py  class_time.py  classroom.py  color.py  customer.py  customer_invoice.py  date_of_week.py  file_question.py  file_result_student.py  harvest_result.py  home_work.py  home_work_file.py  image.py  item.py  master.py  member.py  no_sale_date.py  notification.py  order.py  order_detail.py  order_type.py  packing_result.py  quality.py  quality_group.py  question.py  question_student.py  quick_input.py  roll_call.py  schedule.py  score.py  self_learning.py  setting.py  size.py  size_group.py  slide.py  (+4 more)
api/schemas/: absent_type.py  account.py  audio_file.py  class_time.py  classroom.py  date_of_week.py  file_question.py  file_result_student.py  home_work.py  home_work_file.py  notification.py  question.py  question_student.py  roll_call.py  schedule.py  score.py  self_learning.py  size.py  size_group.py  slide.py  student.py  teacher.py  token.py  unit.py  variety.py
api/tasks/: BK WEB_HỌC VIÊN - HV.csv  __init__.py  import.py  variety.csv
api/tests/: conftest.py  test_api.py  test_auth.py
api/tests/endpoints/: test_boxtype.py  (+10 more)
api/utils/: Google.py  auth.py  cache.py  gg_driver.py  thumbnail.py
(+133 files in other folders)
